# imop-compiler

./: .gitattributes  .gitignore  LICENSE  README.md  README.md.html  build.properties  build.xml  dummy_contributor.txt
NPB3.0-omp-C-master/: Makefile  original.txt
NPB3.0-omp-C-master/BT/: bt.c  npbparams.h
grammar/: modified.html  modified.jj  modified.tex
runner/: .gitignore  mhp-tests.sh  output-thursday-morning.txt  post-pass-only.sh  pre-and-post.sh
src/: README.md
tests/: .gitignore  amgmk-postpass.i  atomic-test.c  auto-normalize.c  bt-long.c  c_fft.i  c_jacobi01-postpass.i  cfg-rem.c  clomp-postpass.i  en.c  enforcer.c  fft.i  for-func.i  heated_plate_merged.i  heated_plate_pointer-merged.i  heated_plate_pointer.c  if-func.c  insert.c  insert.i  internal.c  is-short.i  jacobi-1d-imper-postpass.i  jacobi2d.i  ll.c  ll.i  lu.i  mandelbrot_openmp.i  mdljcell.i  mdljcellmp.tgz  multitask_openmp.i  mxv_openmp.i  null-final.i  ocean6868-virgo.i  output.i  po.i  poisson-temp.i  poisson_openmp-inlined-merged.i  poisson_openmp-inlined.i  poisson_openmp-while-merged.i  poisson_openmp-while.i  (+40 more)
tests/imsuite/src/: CMakeLists.txt  bellman_ford.c  bfs_dijkstra.c  byzantine.c  config.h  dominating_set.c  kcommittee.c  leader_elect_dp.c  leader_elect_hs.c  leader_elect_lcr.c  mis.c  mst.c  run_benchmarks  run_tests  vertex_coloring.c
tests/imsuite/src/ompdist/: CMakeLists.txt  election.c  election.h  graph.c  graph.h  graph_gen.c  graph_gen.h  locks.c  locks.h  msr.c  msr.h  queues.c  queues.h  tree_gen.c  tree_gen.h  utils.c  utils.h  vector.c  vector.h
(+1263 files in other folders)
